fix navbar positioning on mobile and tablet screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ header {
 
 nav {
   position: absolute;
-  top: 6vh;
+  top: 8vh;
   background-color: #c9b084;
   width: 100%;
   left: 0;
